@@ -1,12 +1,9 @@
 package br.com.on.fiap.adaptadores.entrada.manipulador;
 
-import br.com.on.fiap.hexagono.excecao.ApplicationExcecaoPadrao;
-import br.com.on.fiap.hexagono.excecao.CategoriaNaoEncontradaExcecao;
-import br.com.on.fiap.hexagono.excecao.ProdutoExistenteExcecao;
-import br.com.on.fiap.hexagono.excecao.ProdutoNaoEncontratoExcecao;
+import br.com.on.fiap.hexagono.excecao.*;
+
 import java.time.LocalDateTime;
 import java.util.Collections;
-import java.util.stream.Collectors;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -18,8 +15,8 @@ import org.springframework.web.context.request.WebRequest;
 @RestControllerAdvice
 public class ManipuladorExcecaoGlobal {
 
-	@ExceptionHandler(ApplicationExcecaoPadrao.class)
-	public ResponseEntity<DetalhesErrosGerais> handleApplicationExcecaoPadrao(ApplicationExcecaoPadrao ex,
+	@ExceptionHandler(ExcecaoPadraoAplicacao.class)
+	public ResponseEntity<DetalhesErrosGerais> handleApplicationExcecaoPadrao(ExcecaoPadraoAplicacao ex,
 			WebRequest request) {
 		return ResponseEntity.badRequest()
 				.body(DetalhesErrosGerais.builder().statusCode(HttpStatus.BAD_REQUEST.value())
@@ -30,12 +27,10 @@ public class ManipuladorExcecaoGlobal {
 	@ExceptionHandler(MethodArgumentNotValidException.class)
 	public ResponseEntity<DetalhesErrosGerais> handleValidationExceptions(MethodArgumentNotValidException ex,
 			WebRequest request) {
-		return ResponseEntity.badRequest()
-				.body(DetalhesErrosGerais.builder().statusCode(HttpStatus.BAD_REQUEST.value())
-						.timestamp(LocalDateTime.now()).details(request.getDescription(false))
-						.errors(ex.getBindingResult().getFieldErrors().stream()
-								.map(DefaultMessageSourceResolvable::getDefaultMessage).collect(Collectors.toList()))
-						.build());
+		return ResponseEntity.badRequest().body(DetalhesErrosGerais.builder().statusCode(HttpStatus.BAD_REQUEST.value())
+				.timestamp(LocalDateTime.now()).details(request.getDescription(false)).errors(ex.getBindingResult()
+						.getFieldErrors().stream().map(DefaultMessageSourceResolvable::getDefaultMessage).toList())
+				.build());
 	}
 
 	@ExceptionHandler(CategoriaNaoEncontradaExcecao.class)
@@ -56,8 +51,25 @@ public class ManipuladorExcecaoGlobal {
 						.errors(Collections.singletonList(ex.getMessage())).build());
 	}
 
-	@ExceptionHandler(ProdutoNaoEncontratoExcecao.class)
-	public ResponseEntity<DetalhesErrosGerais> handleProdutoNaoEncontradoExcecao(ProdutoNaoEncontratoExcecao ex,
+	@ExceptionHandler(ClienteExistenteExcecao.class)
+	public ResponseEntity<DetalhesErrosGerais> handleClienteExistenteExcecao(ClienteExistenteExcecao ex,
+			WebRequest request) {
+		return ResponseEntity.badRequest()
+				.body(DetalhesErrosGerais.builder().statusCode(HttpStatus.BAD_REQUEST.value())
+						.timestamp(LocalDateTime.now()).details(request.getDescription(false))
+						.errors(Collections.singletonList(ex.getMessage())).build());
+	}
+
+	@ExceptionHandler(ProdutoNaoEncontradoExcecao.class)
+	public ResponseEntity<DetalhesErrosGerais> handleProdutoNaoEncontradoExcecao(ProdutoNaoEncontradoExcecao ex,
+			WebRequest request) {
+		return new ResponseEntity<>(DetalhesErrosGerais.builder().statusCode(HttpStatus.NOT_FOUND.value())
+				.timestamp(LocalDateTime.now()).details(request.getDescription(false))
+				.errors(Collections.singletonList(ex.getMessage())).build(), HttpStatus.NOT_FOUND);
+	}
+
+	@ExceptionHandler(ClienteNaoEncontradoExcecao.class)
+	public ResponseEntity<DetalhesErrosGerais> handleClienteNaoEncontradoExcecao(ClienteNaoEncontradoExcecao ex,
 			WebRequest request) {
 		return new ResponseEntity<>(DetalhesErrosGerais.builder().statusCode(HttpStatus.NOT_FOUND.value())
 				.timestamp(LocalDateTime.now()).details(request.getDescription(false))
